darkened images on image grid to ensure legibility of the type

--- a/sites/all/themes/rbsc_bootstrap/css/style.css
+++ b/sites/all/themes/rbsc_bootstrap/css/style.css
@@ -420,25 +420,32 @@ padding: 5px 20px;
   margin-bottom: 10px;
 }
 
+.color-grid-item, .color-grid-item-small {
+  background-color: black;
+  border-radius: 6px;
+}
 
 
-/*
-      .img-grid .field-item img{
-        filter: opacity(.8) grayscale(1);
-        -webkit-filter: opacity(.8) grayscale(1);
-        -moz-filter:opacity(.8) grayscale(1);
-        -ms-filter:opacity(.8) grayscale(1);
-        -o-filter:opacity(.8) grayscale(1);
-      }   
+.darken{
+  opacity: .75;
+  filter: alpha(opacity=75); 
+  filter: opacity(.75);
+  -webkit-filter: opacity(.75);
+  -moz-filter:opacity(.75);
+  -ms-filter:opacity(.75);
+  -o-filter:opacity(.75);
+}   
 
-      img.img-responsive.img-hover{
-        filter: opacity(.8) grayscale(0);
-        -webkit-filter: opacity(.8) grayscale(0);
-        -moz-filter:opacity(.8) grayscale(0);
-        -ms-filter:opacity(.8) grayscale(0);
-        -o-filter:opacity(.8) grayscale(0);
-      }       
-*/
+.darken-hover{
+  opacity: 1;
+  filter: alpha(opacity=100); 
+  filter: opacity(1);
+  -webkit-filter: opacity(1);
+  -moz-filter:opacity(1);
+  -ms-filter:opacity(1);
+  -o-filter:opacity(1);
+}       
+
 
       @media only screen and (min-width : 321px) {
       /* Styles */
